--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Pic Organizer</string>
+    <string name="str_action_setting">Settings</string>
 </resources>
